# array_view

./: .gitignore  .travis.yml  CMakeLists.txt  Guardfile  README.md
include/: array_view.hpp  array_view_output.hpp
test/: CMakeLists.txt  array_view_test.cpp  config.hpp  test.cpp  test_ctors.cpp
